@@ -109,7 +109,7 @@ public class PrivilegeManagerImplTest extends AbstractSecurityTest {
 
     @Test
     public void testGetPrivilegeRemappedNamespace() throws Exception {
-        NamePathMapper mapper = new NamePathMapperImpl(new LocalNameMapper(root, ImmutableMap.of("prefix", NamespaceRegistry.NAMESPACE_JCR)));
+        NamePathMapper mapper = new NamePathMapperImpl(new LocalNameMapper(root, Map.of("prefix", NamespaceRegistry.NAMESPACE_JCR)));
         Privilege p = create(root, mapper).getPrivilege("prefix:read");
 
         assertNotNull(p);
@@ -120,7 +120,7 @@ public class PrivilegeManagerImplTest extends AbstractSecurityTest {
 
     @Test(expected = AccessControlException.class)
     public void testGetPrivilegeInvalidRemappedNamespace() throws Exception {
-        NamePathMapper mapper = new NamePathMapperImpl(new LocalNameMapper(root, ImmutableMap.of("prefix", "unknownUri")));
+        NamePathMapper mapper = new NamePathMapperImpl(new LocalNameMapper(root, Map.of("prefix", "unknownUri")));
         create(root, mapper).getPrivilege("prefix:read");
     }
 
@@ -183,7 +183,7 @@ public class PrivilegeManagerImplTest extends AbstractSecurityTest {
 
     @Test(expected = RepositoryException.class)
     public void testRegisterPrivilegeReservedRemappedNamespace() throws Exception {
-        NamePathMapper mapper = new NamePathMapperImpl(new LocalNameMapper(root, ImmutableMap.of("prefix", NamespaceRegistry.NAMESPACE_JCR)));
+        NamePathMapper mapper = new NamePathMapperImpl(new LocalNameMapper(root, Map.of("prefix", NamespaceRegistry.NAMESPACE_JCR)));
         PrivilegeManager pmgr = create(root, mapper);
         pmgr.registerPrivilege("prefix:customPrivilege", true, new String[] {"prefix:read", "prefix:write"});    }
 
